static/assets/sass/base/_webinar.scss
/* ... */
[data-tab-content] {
  display: none;
}

.active[data-tab-content] {
  display: block;
}

.tabs {
  display: flex;
  justify-content: space-around;
  list-style-type: none;
  margin: 0;
  padding: 0;
  border-bottom: 1px solid black;
}

.tab {
  cursor: pointer;
  padding: 10px;
}

.tab.active {
  background-color: #ccc;
}

.tab:hover {
  background-color: #aaa;
}

.tab-content {
  margin-left: 20px;
  margin-right: 20px;
}

.search-box {
  display: flex;
  align-items: center;
  border: 1px solid #a6abbd;
  padding: 0px 16px;
  width: 430px;
  border-radius: 4px;

  input {
    border: none;
    width: 100%;
    padding: 12px 8px;

    &:focus {
      outline: none;
      border: none;
    }
  }
}
.is-sticky.webinar-search {
  position: sticky;
  top: 61px;
  background-color: #fff;
  z-index: 99;
}
/****************************************
Responsive Classes
*****************************************/
@media (max-width: 1023.98px) {
  .webinar-header {
    .upcoming-message {
      h1 {
        font-size: 34px;
      }
    }

    .webinar-list-items {
      .webinar-item {
        width: 110px;

        &.is-active {
          &::after {
            left: 23px;
          }
        }

        h2 {
          font-size: 22px;
        }

        p {
          font-size: 14px;
        }
      }
    }
  }

  .webinar-body {
    .webinar-title {
      h1 {
        font-size: 22px;
      }
    }

    .webinar-speakers {
      .single-speaker {
        .speaker-info {
          padding: 15px;

          h6 {
            font-size: 14px;
          }
        }
      }
    }
  }

  .search-box {
    width: 190px;
  }
}

// // Small devices (landscape phones, 576px and up)
@media (max-width: 500px) {
  .webinar-hero-area.mt-80.mr-100 {
    margin-right: 0 !important;
    margin-top: 80px !important;
  }

  .webinar-header {
    flex-direction: column;
    align-items: flex-start !important;

    .upcoming-message {
      h1 {
        font-size: 30px;
        margin-bottom: 20px;

        br {
          display: none;
        }
      }
    }

    .webinar-list-items {
      .webinar-item {
        margin-right: 10px;
        width: auto;
      }
    }
  }

  .webinar-body {
    .date-and-location {
      flex-direction: column;
      align-items: flex-start !important;

      .date {
        margin-bottom: 8px;

        span {
          font-size: 15px;
        }
      }
    }

    .webinar-speakers {
      overflow: auto;

      .single-speaker {
        min-width: 130px;
      }
    }
  }
}

@media (min-width: 501px) and (max-width: 768.98px) {
  .webinar-hero-area.mt-80.mr-100 {
    margin-right: 0 !important;
    margin-top: 80px !important;
  }

  .webinar-header {
    flex-direction: column;
    align-items: flex-start !important;

    .upcoming-message {
      h1 {
        font-size: 34px;
        margin-bottom: 20px;

        br {
          display: none;
        }
      }
    }

    .webinar-list-items {
      .webinar-item {
        margin-right: 15px;
        width: auto;

        h2 {
          font-size: 32px;
        }
      }
    }
  }

  .webinar-body {
    .date-and-location {
      flex-direction: column;
      align-items: flex-start !important;

      .date {
        margin-bottom: 8px;

        span {
          font-size: 15px;
        }
      }
    }

    .webinar-speakers {
      overflow: auto;

      .single-speaker {
        min-width: 130px;
      }
    }
  }
}

// Medium devices (tablets, 769px and up)
@media (min-width: 769px) and (max-width: 1023.98px) {
  .webinar-hero-area.mt-80.mr-100 {
    margin-right: 0 !important;
    margin-top: 80px !important;
  }

  .webinar-header {
    flex-direction: row;
    align-items: center !important;

    .upcoming-message {
      h1 {
        font-size: 34px;
        margin-bottom: 20px;

        br {
          display: block;
        }
      }
    }

    .webinar-list-items {
      .webinar-item {
        margin-right: 15px;
        width: auto;

        h2 {
          font-size: 32px;
        }
      }
    }
  }

  .webinar-body {
    .date-and-location {
      flex-direction: column;
      align-items: flex-start !important;

      .date {
        margin-bottom: 8px;

        span {
          font-size: 15px;
        }
      }
    }

    .webinar-speakers {
      overflow: auto;

      .single-speaker {
        min-width: 130px;
      }
    }
  }
}

// Large devices (desktops, 1024px and up)
@media (min-width: 1024px) and (max-width: 1215px) {
  .webinar-hero-area.mt-80.mr-100 {
    margin-right: 0 !important;
    margin-top: 80px !important;
  }

  .webinar-header {
    flex-direction: row;
    align-items: center !important;

    .upcoming-message {
      h1 {
        font-size: 34px;
        margin-bottom: 20px;

        br {
          display: block;
        }
      }
    }

    .webinar-list-items {
      .webinar-item {
        margin-right: 15px;
        width: auto;

        h2 {
          font-size: 32px;
        }
      }
    }
  }

  .webinar-body {
    .webinar-title {
      h1 {
        font-size: 22px;
      }
    }

    .date-and-location {
      flex-direction: row;
      align-items: center !important;

      .date {
        margin-bottom: 0px;

        span {
          font-size: 15px;
        }
      }
    }

    .webinar-speakers {
      overflow: auto;

      .single-speaker {
        min-width: 130px;
      }
    }
  }
}
/* ... */

